# whibox-gcm

./: .gitignore  CMakeLists.txt  README.md
include/wbcrypto/: aes.h  modes.h  wbaes.h  wbaes_wbgcm_ee.h  wbaes_wbgcm_ee2.h  wbaes_wbgcm_mask.h
src/aes/: aes.c  aes_modes.c
src/modes/: gcm128.c
src/wbaes/: wbaes.c  wbaes_modes.c
src/wbaes_wbgcm_ee/: wbaes_wbgcm_ee.c  wbaes_wbgcm_ee_mode.c
src/wbaes_wbgcm_ee2/: wbaes_wbgcm_ee2.c  wbaes_wbgcm_ee2_mode.c
src/wbaes_wbgcm_mask/: wbaes_wbgcm_mask.c  wbaes_wbgcm_mask_mode.c
test/: CMakeLists.txt  test_aes.c  test_local.c  test_local.h  test_performance.c  test_wbaes.c  test_wbaes_wbgcm_ee.c  test_wbaes_wbgcm_ee2.c  test_wbaes_wbgcm_mask.c
